fix: UI alignment fixes

--- a/src/styles/users.css
+++ b/src/styles/users.css
@@ -1,6 +1,10 @@
 .user-container {
-  padding: 4rem 3rem ;
+  padding: 1rem 3rem 4rem 3rem ;
   background-color: #f3f6f9;
+}
+
+.user-container .ant-card .ant-card-body{
+  padding: 0 !important;
 }
 
 .user-header {
@@ -8,12 +12,6 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 16px;
-}
-
-.user-toolbar {
-  display: flex;
-  gap: 10px;
-  align-items: center;
 }
 
 .search-input {
@@ -28,6 +26,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 16px;
+  padding: 24px;
 }
 
 .user-card {
@@ -52,4 +51,11 @@
   margin-top: 20px;
   display: flex;
   justify-content: flex-end;
+}
+
+.logOutBtn{
+  background-color: red !important;
+}
+.logOutBtn{
+  color: white !important;
 }
